--- a/features/async-clipboard.yml.dist
+++ b/features/async-clipboard.yml.dist
@@ -84,6 +84,7 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "133"
   #   chrome_android: "98"
   #   firefox: "127"
   #   firefox_android: "127"
