--- a/features/draft/spec/css-inline-3.yml.dist
+++ b/features/draft/spec/css-inline-3.yml.dist
@@ -7,6 +7,8 @@ status:
 compat_features:
   # baseline: false
   # support:
+  #   chrome: "133"
+  #   chrome_android: "133"
   #   safari: "18.2"
   #   safari_ios: "18.2"
   - css.types.text-edge
