--- a/features/draft/spec/pointerlock-2.yml.dist
+++ b/features/draft/spec/pointerlock-2.yml.dist
@@ -3,7 +3,9 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "133"
+    chrome_android: "133"
 compat_features:
   # baseline: false
   # support:
@@ -24,5 +26,7 @@ compat_features:
 
   # ⬇️ Same status as overall feature ⬇️
   # baseline: false
-  # support: {}
+  # support:
+  #   chrome: "133"
+  #   chrome_android: "133"
   - api.Document.moveBefore
