--- a/features/draft/spec/web-animations-2.yml.dist
+++ b/features/draft/spec/web-animations-2.yml.dist
@@ -3,6 +3,8 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "133"
+    chrome_android: "133"
 compat_features:
   - api.Animation.overallProgress
