--- a/features/draft/spec/webrtc-stats.yml.dist
+++ b/features/draft/spec/webrtc-stats.yml.dist
@@ -7,5 +7,7 @@ status:
     chrome: "105"
     chrome_android: "105"
     edge: "105"
+    firefox: "135"
+    firefox_android: "135"
 compat_features:
   - api.RTCStatsReport.type_outbound-rtp.rid
