--- a/features/page-setup.yml.dist
+++ b/features/page-setup.yml.dist
@@ -54,6 +54,8 @@ compat_features:
   # baseline: false
   # support:
   #   chrome: "131"
+  #   chrome_android: "131"
+  #   edge: "131"
   - css.at-rules.page.bottom-center
   - css.at-rules.page.bottom-left
   - css.at-rules.page.bottom-left-corner
