--- a/features/draft/spec/dom.yml.dist
+++ b/features/draft/spec/dom.yml.dist
@@ -3,7 +3,9 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "133"
+    chrome_android: "133"
 compat_features:
   # baseline: high
   # baseline_low_date: ≤2020-01-15
@@ -84,7 +86,9 @@ compat_features:
 
   # ⬇️ Same status as overall feature ⬇️
   # baseline: false
-  # support: {}
+  # support:
+  #   chrome: "133"
+  #   chrome_android: "133"
   - api.Document.moveBefore
   - api.DocumentFragment.moveBefore
   - api.Element.moveBefore
