--- a/features/draft/spec/html.yml.dist
+++ b/features/draft/spec/html.yml.dist
@@ -1347,10 +1347,15 @@ compat_features:
   - api.HTMLAnchorElement.hrefTranslate
   - html.elements.a.hreftranslate
 
+  # baseline: false
+  # support:
+  #   chrome: "133"
+  #   chrome_android: "133"
+  - api.Document.moveBefore
+
   # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support: {}
-  - api.Document.moveBefore
   - api.HTMLButtonElement.command
   - api.HTMLButtonElement.commandForElement
   - api.HTMLElement.command_event
