--- a/features/draft/spec/selection-api.yml.dist
+++ b/features/draft/spec/selection-api.yml.dist
@@ -52,10 +52,15 @@ compat_features:
   #   edge: "79"
   - api.Document.featurePolicy
 
+  # baseline: false
+  # support:
+  #   chrome: "133"
+  #   chrome_android: "133"
+  - api.Document.moveBefore
+
   # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support: {}
-  - api.Document.moveBefore
   - api.Selection.collapse.accepts_nodes_in_shadow_trees
   - api.Selection.extend.accepts_nodes_in_shadow_trees
   - api.Selection.setBaseAndExtent.accepts_nodes_in_shadow_trees
