--- a/features/font-variant-emoji.yml.dist
+++ b/features/font-variant-emoji.yml.dist
@@ -5,20 +5,10 @@ status:
   baseline: false
   support:
     chrome: "131"
+    chrome_android: "131"
     edge: "131"
 compat_features:
-  # baseline: false
-  # support:
-  #   chrome: "131"
-  #   chrome_android: "131"
-  #   edge: "131"
   - css.properties.font-variant-emoji
-
-  # ⬇️ Same status as overall feature ⬇️
-  # baseline: false
-  # support:
-  #   chrome: "131"
-  #   edge: "131"
   - css.properties.font-variant-emoji.emoji
   - css.properties.font-variant-emoji.normal
   - css.properties.font-variant-emoji.text
