--- a/features/json-raw.yml.dist
+++ b/features/json-raw.yml.dist
@@ -7,6 +7,8 @@ status:
     chrome: "114"
     chrome_android: "114"
     edge: "114"
+    firefox: "135"
+    firefox_android: "135"
 compat_features:
   - javascript.builtins.JSON.isRawJSON
   - javascript.builtins.JSON.parse.reviver_parameter_context_argument
