--- a/features/text-box.yml.dist
+++ b/features/text-box.yml.dist
@@ -4,6 +4,8 @@
 status:
   baseline: false
   support:
+    chrome: "133"
+    chrome_android: "133"
     safari: "18.2"
     safari_ios: "18.2"
 compat_features:
