--- a/features/wasm-memory64.yml.dist
+++ b/features/wasm-memory64.yml.dist
@@ -4,6 +4,8 @@
 status:
   baseline: false
   support:
+    chrome: "133"
+    chrome_android: "133"
     firefox: "134"
     firefox_android: "134"
 compat_features:
