--- a/features/geolocation.yml
+++ b/features/geolocation.yml
@@ -31,5 +31,6 @@ compat_features:
   - api.GeolocationPositionError.secure_context_required
   - api.Navigator.geolocation
   - api.Navigator.geolocation.secure_context_required
+  - api.Permissions.permission_geolocation
   - html.elements.iframe.allow.geolocation
   - http.headers.Permissions-Policy.geolocation
