--- a/features/notifications.yml
+++ b/features/notifications.yml
@@ -38,6 +38,7 @@ compat_features:
   - api.NotificationEvent.NotificationEvent
   - api.NotificationEvent.action
   - api.NotificationEvent.notification
+  - api.Permissions.permission_notifications
   - api.ServiceWorkerGlobalScope.notificationclick_event
   - api.ServiceWorkerGlobalScope.notificationclose_event
   - api.ServiceWorkerRegistration.getNotifications
