--- a/features/local-fonts.yml
+++ b/features/local-fonts.yml
@@ -8,6 +8,7 @@ compat_features:
   - api.FontData.fullName
   - api.FontData.postscriptName
   - api.FontData.style
+  - api.Permissions.permission_local-fonts
   - api.Window.queryLocalFonts
   - html.elements.iframe.allow.local-fonts
   - http.headers.Permissions-Policy.local-fonts
