--- a/features/local-fonts.yml.dist
+++ b/features/local-fonts.yml.dist
@@ -13,6 +13,7 @@ compat_features:
   - api.FontData.fullName
   - api.FontData.postscriptName
   - api.FontData.style
+  - api.Permissions.permission_local-fonts
   - api.Window.queryLocalFonts
   - html.elements.iframe.allow.local-fonts
   - http.headers.Permissions-Policy.local-fonts
