--- a/features/magnetometer.yml.dist
+++ b/features/magnetometer.yml.dist
@@ -7,6 +7,13 @@ status:
 compat_features:
   # baseline: false
   # support:
+  #   chrome: "62"
+  #   chrome_android: "62"
+  #   edge: "79"
+  - api.Permissions.permission_magnetometer
+
+  # baseline: false
+  # support:
   #   chrome: "66"
   #   chrome_android: "66"
   #   edge: "79"
