--- a/features/media-capture.yml
+++ b/features/media-capture.yml
@@ -69,6 +69,8 @@ compat_features:
   - api.OverconstrainedError
   - api.OverconstrainedError.OverconstrainedError
   - api.OverconstrainedError.constraint
+  - api.Permissions.permission_camera
+  - api.Permissions.permission_microphone
   - html.elements.iframe.allow.camera
   - html.elements.iframe.allow.microphone
   - http.headers.Permissions-Policy.camera
