--- a/features/storage-manager.yml
+++ b/features/storage-manager.yml
@@ -2,6 +2,8 @@ name: Storage manager
 description: "The `navigator.storage` API provides information about the availability and persistence of the data that a site stores on the device, by using APIs such as the Cache API or the IndexedDB API."
 spec: https://storage.spec.whatwg.org/
 group: storage
+status:
+  compute_from: api.StorageManager.estimate
 compat_features:
   - api.Navigator.storage
   - api.WorkerNavigator.storage
@@ -9,3 +11,4 @@ compat_features:
   - api.StorageManager.estimate
   - api.StorageManager.persist
   - api.StorageManager.persisted
+  - api.Permissions.permission_persistent-storage
