--- a/features/storage-manager.yml.dist
+++ b/features/storage-manager.yml.dist
@@ -42,3 +42,12 @@ compat_features:
   #   safari: "17"
   #   safari_ios: "17"
   - api.StorageManager.estimate
+
+  # baseline: false
+  # support:
+  #   chrome: "71"
+  #   chrome_android: "71"
+  #   edge: "79"
+  #   firefox: "53"
+  #   firefox_android: "53"
+  - api.Permissions.permission_persistent-storage
