--- a/features/a.yml
+++ b/features/a.yml
@@ -26,7 +26,10 @@ compat_features:
   - api.HTMLAnchorElement.username
   - html.elements.a
   - html.elements.a.href
+  - html.elements.a.href.href_sms
+  - html.elements.a.href.href_top
   - html.elements.a.hreflang
+  - html.elements.a.implicit_noopener
   - html.elements.a.rel
   - html.elements.a.rel.noopener
   - html.elements.a.rel.noreferrer
