--- a/features/a.yml.dist
+++ b/features/a.yml.dist
@@ -48,6 +48,19 @@ compat_features:
   - html.elements.a.type
 
   # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "10"
+  #   firefox_android: "10"
+  #   safari: ≤4
+  #   safari_ios: ≤3.2
+  - html.elements.a.href.href_top
+
+  # baseline: high
   # baseline_low_date: 2015-11-12
   # baseline_high_date: 2018-05-12
   # support:
@@ -125,3 +138,22 @@ compat_features:
   #   safari: "10.1"
   #   safari_ios: "10.3"
   - html.elements.a.rel.noopener
+
+  # baseline: high
+  # baseline_low_date: 2021-01-21
+  # baseline_high_date: 2023-07-21
+  # support:
+  #   chrome: "88"
+  #   chrome_android: "88"
+  #   edge: "88"
+  #   firefox: "79"
+  #   firefox_android: "79"
+  #   safari: "12.1"
+  #   safari_ios: "12.2"
+  - html.elements.a.implicit_noopener
+
+  # baseline: false
+  # support:
+  #   firefox: "12"
+  #   firefox_android: "14"
+  - html.elements.a.href.href_sms
