--- a/features/fetch-request-streaming.yml
+++ b/features/fetch-request-streaming.yml
@@ -1,4 +1,4 @@
-name: Fetch request streaming
+name: Fetch request streams
 description: Setting the `body` property of a request to a `ReadableStream`, when using the `fetch()` method, allows you to stream data to a server.
 spec: https://fetch.spec.whatwg.org/#concept-body-stream
 compat_features:
