--- a/features/fetch-request-streaming.yml
+++ b/features/fetch-request-streaming.yml
@@ -1,5 +1,5 @@
 name: Fetch request streams
-description: Setting the `body` property of a request to a `ReadableStream`, when using the `fetch()` method, allows you to stream data to a server.
+description: A `fetch()` request streams data to the server when a request's `body` property is a `ReadableStream` object.
 spec: https://fetch.spec.whatwg.org/#concept-body-stream
 compat_features:
   - api.Request.body
