--- a/features/contrast-color.yml
+++ b/features/contrast-color.yml
@@ -1,4 +1,4 @@
 name: contrast-color()
-description: "The `contrast-color()` CSS function picks a text color that has guaranteed contrast with a background color."
-spec: https://drafts.csswg.org/css-color-5/#contrast-color
+description: "The `contrast-color()` CSS function picks a color that has guaranteed contrast against a specified foreground or background color."
+spec: https://drafts.csswg.org/css-color-6/#funcdef-contrast-color
 group: color-types
