Apply suggested description
Co-authored-by: Patrick Brosset <patrickbrosset@gmail.com>

--- a/features/inputmode.yml
+++ b/features/inputmode.yml
@@ -1,5 +1,5 @@
 name: inputmode
-description: The `inputmode` global HTML attribute gives a hint about what type of data is to be entered into an `<input>` element, such as `text`, `numeric`, or `email`, so the browser may choose a virtual keyboard.
+description: The `inputmode` global HTML attribute gives a hint about what type of data is to be entered into an `<input>` element, such as `text`, `numeric`, or `email`, so the browser may help the user enter data using an adapted input mechanism, such as an on-screen virtual keyboard.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#attr-inputmode
 caniuse: input-inputmode
 compat_features:
