--- a/features/element-capture.yml
+++ b/features/element-capture.yml
@@ -1,5 +1,5 @@
 name: Element capture
-description: The `RestrictionTarget` API captures video from a specific element, excluding content which might occlude the element itself, such as video conferencing controls.
+description: The `restrictTo()` method on screen capture media tracks limits capture to a specific element, excluding content which might occlude the element itself, such as video conferencing controls.
 spec: https://screen-share.github.io/element-capture/
 compat_features:
   - api.BrowserCaptureMediaStreamTrack.restrictTo
