--- a/features/attr.yml.dist
+++ b/features/attr.yml.dist
@@ -9,6 +9,7 @@ compat_features:
   # support:
   #   chrome: "133"
   #   chrome_android: "133"
+  #   edge: "133"
   #   firefox: "119"
   #   firefox_android: "119"
   - css.types.attr.fallback
@@ -17,6 +18,7 @@ compat_features:
   # support:
   #   chrome: "133"
   #   chrome_android: "133"
+  #   edge: "133"
   - css.types.attr.type-or-unit
 
   # ⬇️ Same status as overall feature ⬇️
