--- a/features/attribution-reporting.yml.dist
+++ b/features/attribution-reporting.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "133"
     chrome_android: "133"
+    edge: "133"
 compat_features:
   # baseline: false
   # support:
@@ -41,4 +42,5 @@ compat_features:
   # support:
   #   chrome: "133"
   #   chrome_android: "133"
+  #   edge: "133"
   - api.HTMLAreaElement.attributionSrc
