--- a/features/container-scroll-state-queries.yml.dist
+++ b/features/container-scroll-state-queries.yml.dist
@@ -6,5 +6,6 @@ status:
   support:
     chrome: "133"
     chrome_android: "133"
+    edge: "133"
 compat_features:
   - css.properties.container-type.scroll-state
