--- a/features/draft/spec/permissions.yml.dist
+++ b/features/draft/spec/permissions.yml.dist
@@ -3,9 +3,7 @@
 
 status:
   baseline: false
-  support:
-    chrome: "103"
-    edge: "103"
+  support: {}
 compat_features:
   # baseline: low
   # baseline_low_date: 2022-09-12
@@ -83,13 +81,16 @@ compat_features:
   #   chrome: "62"
   #   chrome_android: "62"
   #   edge: "79"
-  - api.Permissions.permission_accessibility-events
   - api.Permissions.permission_background-sync
   - api.Permissions.permission_magnetometer
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "103"
   #   edge: "103"
   - api.Permissions.permission_local-fonts
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support: {}
+  - api.Permissions.permission_accessibility-events
