--- a/features/draft/spec/pointerlock-2.yml.dist
+++ b/features/draft/spec/pointerlock-2.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "133"
     chrome_android: "133"
+    edge: "133"
 compat_features:
   # baseline: false
   # support:
@@ -29,4 +30,5 @@ compat_features:
   # support:
   #   chrome: "133"
   #   chrome_android: "133"
+  #   edge: "133"
   - api.Document.moveBefore
