--- a/features/draft/spec/selection-api.yml.dist
+++ b/features/draft/spec/selection-api.yml.dist
@@ -56,6 +56,7 @@ compat_features:
   # support:
   #   chrome: "133"
   #   chrome_android: "133"
+  #   edge: "133"
   - api.Document.moveBefore
 
   # ⬇️ Same status as overall feature ⬇️
