--- a/features/open-closed.yml.dist
+++ b/features/open-closed.yml.dist
@@ -9,6 +9,7 @@ compat_features:
   # support:
   #   chrome: "133"
   #   chrome_android: "133"
+  #   edge: "133"
   - css.selectors.open
 
   # ⬇️ Same status as overall feature ⬇️
