--- a/features/text-box.yml.dist
+++ b/features/text-box.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "133"
     chrome_android: "133"
+    edge: "133"
     safari: "18.2"
     safari_ios: "18.2"
 compat_features:
