--- a/features/draft/spec/css-scroll-snap-2.yml.dist
+++ b/features/draft/spec/css-scroll-snap-2.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "133"
     chrome_android: "133"
+    edge: "133"
 compat_features:
   - css.properties.scroll-initial-target
   - css.properties.scroll-initial-target.nearest
