--- a/features/draft/spec/cssom-view-1.yml.dist
+++ b/features/draft/spec/cssom-view-1.yml.dist
@@ -23,6 +23,7 @@ compat_features:
   # support:
   #   chrome: "133"
   #   chrome_android: "133"
+  #   edge: "133"
   - api.Document.moveBefore
   - api.Element.moveBefore
 
