--- a/features/draft/spec/dom.yml.dist
+++ b/features/draft/spec/dom.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "133"
     chrome_android: "133"
+    edge: "133"
 compat_features:
   # baseline: high
   # baseline_low_date: ≤2020-01-15
@@ -89,6 +90,7 @@ compat_features:
   # support:
   #   chrome: "133"
   #   chrome_android: "133"
+  #   edge: "133"
   - api.Document.moveBefore
   - api.DocumentFragment.moveBefore
   - api.Element.moveBefore
