--- a/features/draft/spec/web-animations-2.yml.dist
+++ b/features/draft/spec/web-animations-2.yml.dist
@@ -6,5 +6,6 @@ status:
   support:
     chrome: "133"
     chrome_android: "133"
+    edge: "133"
 compat_features:
   - api.Animation.overallProgress
