--- a/features/wasm-memory64.yml.dist
+++ b/features/wasm-memory64.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "133"
     chrome_android: "133"
+    edge: "133"
     firefox: "134"
     firefox_android: "134"
 compat_features:
