--- a/features/text-box.yml.dist
+++ b/features/text-box.yml.dist
@@ -19,3 +19,8 @@ compat_features:
   - css.properties.text-box-trim.trim-end
   - css.properties.text-box-trim.trim-start
   - css.properties.text-box.normal
+  - css.types.text-edge
+  - css.types.text-edge.alphabetic
+  - css.types.text-edge.cap
+  - css.types.text-edge.ex
+  - css.types.text-edge.text
