Found remaining typo

--- a/features/css-object-model-discouraged.yml
+++ b/features/css-object-model-discouraged.yml
@@ -1,6 +1,6 @@
 name: CSS object model (discouraged)
 description: The superseded DOM level 2 style specification defined interfaces to access and modify CSS styles, which are now excluded from the CSS Object Model.
-spec: hhttps://www.w3.org/TR/DOM-Level-2-Style/
+spec: https://www.w3.org/TR/DOM-Level-2-Style/
 group: cssom
 discouraged:
   according_to:
