Add unspecified help page

--- a/features/unspecified-javascript.yml
+++ b/features/unspecified-javascript.yml
@@ -1,9 +1,9 @@
 name: Unspecified JavaScript
 description: Some browsers implement unspecified JavaScript properties or methods. This is an artificial feature that contains references to browser compatibility data entries for those additions.
-spec: link to our own documentation explaining ourselves in more detail
+spec: https://web-platform-dx.github.io/unspecified/
 discouraged:
   according_to:
-    - TODO link to our own documentation explaining ourselves in more detail
+    - https://web-platform-dx.github.io/unspecified/
 compat_features:
   # Firefox-only Function property.
   # There exists some discussion of getting rid
