--- a/features/unspecified-apis.yml
+++ b/features/unspecified-apis.yml
@@ -1,9 +1,9 @@
 name: Unspecified APIs
 description: Some browsers implement unspecified APIs. This is an artificial feature that contains references to browser compatibility data entries for those additions.
-spec: link to our own documentation explaining ourselves in more detail
+spec: https://web-platform-dx.github.io/unspecified/
 discouraged:
   according_to:
-    - TODO link to our own documentation explaining ourselves in more detail
+    - https://web-platform-dx.github.io/unspecified/
 compat_features:
   # Chrome implemented these APIs while they were in a PR for the spec, which
   # was subsequently not included in the ultimately merged changes.
