--- a/features/unspecified-css.yml
+++ b/features/unspecified-css.yml
@@ -1,9 +1,9 @@
 name: Unspecified CSS
 description: Some browsers implement unspecified CSS properties or values. This is an artificial feature that contains references to browser compatibility data entries for those additions.
-spec: TODO link to our own documentation explaining ourselves in more detail
+spec: https://web-platform-dx.github.io/unspecified/
 discouraged:
   according_to:
-    - TODO link to our own documentation explaining ourselves in more detail
+    - https://web-platform-dx.github.io/unspecified/
 compat_features:
   # Removed from the platform, but not yet removed from BCD
   - -moz-image-region # To be removed in March 2025
