--- a/features/unspecified-html.yml
+++ b/features/unspecified-html.yml
@@ -1,9 +1,9 @@
 name: Unspecified HTML
 description: Some browsers implement unspecified HTML elements and attributes. This is an artificial feature that contains references to browser compatibility data entries for those additions.
-spec: TODO link to our own documentation explaining ourselves in more detail
+spec: https://web-platform-dx.github.io/unspecified/
 discouraged:
   according_to:
-    - TODO link to our own documentation explaining ourselves in more detail
+    - https://web-platform-dx.github.io/unspecified/
 compat_features:
   # Stuck in WHATWG PR limbo:
   # https://github.com/mdn/browser-compat-data/pull/25863
