--- a/features/unspecified-apis.yml.dist
+++ b/features/unspecified-apis.yml.dist
@@ -3,10 +3,7 @@
 
 status:
   baseline: false
-  support:
-    chrome: "70"
-    chrome_android: "70"
-    edge: "79"
+  support: {}
 compat_features:
   # baseline: high
   # baseline_low_date: 2020-01-15
@@ -34,17 +31,14 @@ compat_features:
 
   # baseline: false
   # support:
-  #   chrome: "62"
-  #   chrome_android: "62"
-  #   edge: "79"
-  - api.Permissions.permission_accessibility-events
-
-  # ⬇️ Same status as overall feature ⬇️
-  # baseline: false
-  # support:
   #   chrome: "70"
   #   chrome_android: "70"
   #   edge: "79"
   - api.AbortPaymentEvent
   - api.AbortPaymentEvent.AbortPaymentEvent
   - api.AbortPaymentEvent.respondWith
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support: {}
+  - api.Permissions.permission_accessibility-events
