--- a/features/css-object-model-discouraged.yml
+++ b/features/css-object-model-discouraged.yml
@@ -1,5 +1,5 @@
-name: CSS object model (discouraged)
-description: The superseded DOM level 2 style specification defined interfaces to access and modify CSS styles, which are now excluded from the CSS Object Model.
+name: CSS object model (DOM level 2)
+description: The DOM level 2 style specification defined interfaces to access and modify CSS styles, such as `CSSValue` and `CSSPrimitiveValue`, that were later excluded from the CSS object model.
 spec: https://www.w3.org/TR/DOM-Level-2-Style/
 group: cssom
 discouraged:
