Add `protected-audience` feature

--- a/features/protected-audience.yml
+++ b/features/protected-audience.yml
@@ -1,6 +1,5 @@
-draft_date: 2025-01-20
-name: Protected Audience (formerly FLEDGE)
-description: TODO
+name: Protected Audience
+description: The Protected Audience API facilitates advertisement sales by allowing sites to register users as part of an interest group or to choose which ads appear based on those interest groups, while minimizing the ability of advertisers to track specific members of the interest group. Also known as FLEDGE.
 spec: https://wicg.github.io/turtledove/
 compat_features:
   - api.HTMLIFrameElement.adAuctionHeaders
