--- a/features/document-write.yml
+++ b/features/document-write.yml
@@ -2,7 +2,7 @@ name: document.write()
 description: The `document.open()`, `document.write()`, `document.writeln()`, and `document.close()` methods write content to a document, possibly while that document is still loading.
 spec: https://html.spec.whatwg.org/multipage/dynamic-markup-insertion.html
 discouraged:
-  # The spec doesn't actually discourages against open and close, but these methods are
+  # The spec doesn't actually discourage against open and close, but these methods are
   # really only useful for writing anyway, so we're marking the whole feature as discouraged.
   according_to:
     - https://html.spec.whatwg.org/multipage/dynamic-markup-insertion.html#document.write()
