--- a/features/barprop.yml
+++ b/features/barprop.yml
@@ -1,6 +1,8 @@
 name: BarProp
 description: The `visible` property of the `window.locationbar`, `window.menubar`, `window.personalbar`, `window.scrollbars`, `window.statusbar`, and `window.toolbar` APIs historically represented the visibility of a browser user interface. For privacy reasons, it now represents whether the window is a pop-up.
 spec: https://html.spec.whatwg.org/multipage/nav-history-apis.html#browser-interface-elements
+status:
+  compute_from: api.BarProp.visible
 compat_features:
   - api.BarProp
   - api.BarProp.visible
