--- a/features/web-animations.yml
+++ b/features/web-animations.yml
@@ -1,5 +1,5 @@
 name: Web animations
-description: The programmatic Animation interface for animating elements over time and synchronizing the animations of multiple elements. This can be used to construct new animations through the `animate()` method or `Animation` constructor as well as query and modify CSS animations and transitions retrieved via the `getAnimations()` method.
+description: The `animate()` method, together with the `Animation` interface, animates an element over time, possibly synchronizing the animations of multiple elements. The `getAnimations()` method queries and modifies current CSS animations, transitions, and web animations.
 spec: https://drafts.csswg.org/web-animations-1/
 caniuse: web-animation
 group: animation
