--- a/features/declarative-shadow-dom.yml
+++ b/features/declarative-shadow-dom.yml
@@ -3,6 +3,7 @@ description: The `shadowrootmode` attribute on `<template>` creates a shadow roo
 spec: https://html.spec.whatwg.org/multipage/scripting.html#attr-template-shadowrootmode
 group:
   - html
+  - dom
   - web-components
 caniuse: declarative-shadow-dom
 status:
