--- a/features/dom.yml
+++ b/features/dom.yml
@@ -1,6 +1,7 @@
 name: DOM
 description: The DOM (Document Object Model) API represents HTML and XML documents as trees of nodes. You can use the API to inspect and modify the structure and content of a document.
 spec: https://dom.spec.whatwg.org/
+group: dom
 status:
   compute_from: api.Document
 compat_features:
