--- a/features/mutation-events.yml
+++ b/features/mutation-events.yml
@@ -2,6 +2,7 @@ name: Mutation events
 description: Mutation events like `DOMSubtreeModified`, `DOMNodeInserted`, or `DOMNodeRemoved` fire when DOM changes occur.
 # The latest spec doesn't mention them at all anymore.
 spec: https://w3c.github.io/uievents/
+group: dom
 discouraged:
   according_to:
     - https://www.w3.org/TR/2024/WD-uievents-20240906/#legacy-mutationevent-events
