Add key to `selection-api`

--- a/features/selection-api.yml
+++ b/features/selection-api.yml
@@ -23,6 +23,7 @@ compat_features:
   - api.Range.cloneContents
   - api.Range.cloneRange
   - api.Range.collapse
+  - api.Range.collapse.toStart_parameter_optional
   - api.Range.collapsed
   - api.Range.commonAncestorContainer
   - api.Range.compareBoundaryPoints
