--- a/features/messageerror.yml.dist
+++ b/features/messageerror.yml.dist
@@ -39,3 +39,11 @@ compat_features:
   #   safari: "16.4"
   #   safari_ios: "16.4"
   - api.ServiceWorkerContainer.messageerror_event
+
+  # baseline: false
+  # support:
+  #   firefox: "57"
+  #   firefox_android: "57"
+  #   safari: "16.4"
+  #   safari_ios: "16.4"
+  - api.Worker.messageerror_event
