--- a/features/request-animation-frame-workers.yml
+++ b/features/request-animation-frame-workers.yml
@@ -1,3 +1,4 @@
 name: requestAnimationFrame() in workers
 description: The `requestAnimationFrame()` method in workers schedules a function that runs before the next repaint. Together with offscreen canvas, you can animate content from a worker.
 spec: https://html.spec.whatwg.org/multipage/imagebitmap-and-animations.html#animation-frames
+group: workers
