--- a/features/shared-workers.yml
+++ b/features/shared-workers.yml
@@ -2,6 +2,7 @@ name: Shared worker
 description: The `SharedWorker()` constructor runs a script in its own thread, which can send and receive messages with other scripts running at the same origin.
 spec: https://html.spec.whatwg.org/multipage/workers.html#shared-workers-introduction
 caniuse: sharedworkers
+group: workers
 status:
   compute_from: api.SharedWorker
 compat_features:
