--- a/features/audio-worklet.yml
+++ b/features/audio-worklet.yml
@@ -1,7 +1,9 @@
 name: AudioWorklet
 description: The `AudioWorklet` API runs module code in a separate thread, specifically for non-blocking, low latency audio processing.
 spec: https://webaudio.github.io/web-audio-api/#AudioWorklet
-group: web-audio
+group:
+  - web-audio
+  - workers
 compat_features:
   - api.AudioWorklet
   - api.AudioWorkletGlobalScope
