--- a/features/js-modules-workers.yml
+++ b/features/js-modules-workers.yml
@@ -1,4 +1,6 @@
 name: JavaScript modules in workers
 description: 'The `Worker()` constructor accepts `{ type: "module" }` to load scripts that use `import` and `export`. Also known as ECMAScript modules or ESM in workers.'
 spec: https://html.spec.whatwg.org/multipage/workers.html#dom-worker-dev
-group: js-modules
+group:
+  - js-modules
+  - workers
