Add `FeaturePolicy` interface to feature-policy

--- a/features/draft/feature-policy.yml
+++ b/features/draft/feature-policy.yml
@@ -10,4 +10,9 @@ discouraged:
     - permissions-policy
 compat_features:
   - api.Document.featurePolicy
+  - api.FeaturePolicy
+  - api.FeaturePolicy.allowedFeatures
+  - api.FeaturePolicy.allowsFeature
+  - api.FeaturePolicy.features
+  - api.FeaturePolicy.getAllowlistForFeature
   - api.HTMLIFrameElement.featurePolicy
