Refactoring to better support module imports on older *and* newer versions of node

--- a/packages/baseline-browser-mapping/tsconfig.json
+++ b/packages/baseline-browser-mapping/tsconfig.json
@@ -11,5 +11,5 @@
     "strict": true,
     "noUncheckedIndexedAccess": true
   },
-  "include": ["./src"]
+  "include": ["./src", "./src/data/downstream-browsers.json"]
 }
