--- a/features/unspecified-javascript.yml
+++ b/features/unspecified-javascript.yml
@@ -16,7 +16,7 @@ compat_features:
   - javascript.builtins.InternalError
   - javascript.builtins.InternalError.InternalError
 
-  # Firefox-only Erorr properties
+  # Firefox-only Error properties
   - javascript.builtins.Error.Error.lineNumber_parameter
   - javascript.builtins.Error.lineNumber
   - javascript.builtins.Error.Error.fileName_parameter
