--- a/features/accessor-methods.yml
+++ b/features/accessor-methods.yml
@@ -4,7 +4,7 @@ spec: https://tc39.es/ecma262/multipage/fundamental-objects.html#sec-object.prot
 discouraged:
   according_to:
     - https://tc39.es/ecma262/multipage/additional-ecmascript-features-for-web-browsers.html#sec-additional-ecmascript-features-for-web-browsers
-    # No `alternatives` becuase it would be `alternatives:
+    # No `alternatives` because it would be `alternatives:
     # [object-object, functions]`. In the future it'd be nice to have an
     # internal reference to the object defineProperty method and the function
     # get/set syntax.
