--- a/features/date-get-year-set-year.yml
+++ b/features/date-get-year-set-year.yml
@@ -5,7 +5,7 @@ group: javascript
 discouraged:
   according_to:
     - https://tc39.es/ecma262/multipage/additional-ecmascript-features-for-web-browsers.html#sec-additional-ecmascript-features-for-web-browsers
-  # No `alternatives` becuase it would be `alternatives: [date]`. In the future
+  # No `alternatives` because it would be `alternatives: [date]`. In the future
   # it'd be nice to have an internal reference to getFullYear() and
   # setFullYear() instead.
 compat_features:
