--- a/features/date-to-gmt-string.yml
+++ b/features/date-to-gmt-string.yml
@@ -4,7 +4,7 @@ spec: https://tc39.es/ecma262/multipage/additional-ecmascript-features-for-web-b
 discouraged:
   according_to:
     - https://tc39.es/ecma262/multipage/additional-ecmascript-features-for-web-browsers.html#sec-additional-ecmascript-features-for-web-browsers
-  # No `alternatives` becuase it would be `alternatives: [date]`. In the future
+  # No `alternatives` because it would be `alternatives: [date]`. In the future
   # it'd be nice to have an internal reference to the `toUTCString()` method
   # instead.
 compat_features:
