--- a/features/escape-unescape.yml
+++ b/features/escape-unescape.yml
@@ -5,7 +5,7 @@ group: javascript
 discouraged:
   according_to:
     - https://tc39.es/ecma262/multipage/additional-ecmascript-features-for-web-browsers.html#sec-additional-ecmascript-features-for-web-browsers
-  # No `alternatives` becuase it would be `alternatives: [javascript]`. In the
+  # No `alternatives` because it would be `alternatives: [javascript]`. In the
   # future it'd be nice to have an internal reference to encodeURI(),
   # decodeURI(), encodeURIComponent(), and decodeURIComponent() instead.
 compat_features:
