--- a/features/regexp-compile.yml
+++ b/features/regexp-compile.yml
@@ -4,7 +4,7 @@ spec: https://tc39.es/ecma262/multipage/additional-ecmascript-features-for-web-b
 discouraged:
   according_to:
     - https://tc39.es/ecma262/multipage/additional-ecmascript-features-for-web-browsers.html#sec-additional-ecmascript-features-for-web-browsers
-  # No `alternatives` becuase it would be `alternatives: [regexp]`. In the
+  # No `alternatives` because it would be `alternatives: [regexp]`. In the
   # future it'd be nice to have an internal reference to the RegExp()
   # constructor instead.
 compat_features:
