--- a/features/date-to-gmt-string.yml
+++ b/features/date-to-gmt-string.yml
@@ -7,5 +7,6 @@ discouraged:
   # No `alternatives` because it would be `alternatives: [date]`. In the future
   # it'd be nice to have an internal reference to the `toUTCString()` method
   # instead.
+  # See: https://github.com/web-platform-dx/web-features/issues/2676
 compat_features:
   - javascript.builtins.Date.toGMTString
