--- a/features/proto.yml
+++ b/features/proto.yml
@@ -7,5 +7,6 @@ discouraged:
   # No `alternatives` because it would be `alternatives: [object]`. In the
   # future it'd be nice to have an internal reference to `getPrototypeOf()` and
   # `setPrototypeOf()` instead.
+  # See: https://github.com/web-platform-dx/web-features/issues/2676
 compat_features:
   - javascript.builtins.Object.proto
