Add missing link

--- a/features/accessor-methods.yml
+++ b/features/accessor-methods.yml
@@ -8,7 +8,7 @@ discouraged:
     # [object-object, functions]`. In the future it'd be nice to have an
     # internal reference to the object defineProperty method and the function
     # get/set syntax.
-    # See https://github.com/web-platform-dx/web-features/issues/2676
+    # See: https://github.com/web-platform-dx/web-features/issues/2676
 compat_features:
   - javascript.builtins.Object.defineGetter
   - javascript.builtins.Object.defineSetter
