--- a/features/css-modules.yml
+++ b/features/css-modules.yml
@@ -1,3 +1,3 @@
 name: CSS import attributes
-description: 'Module `import … with { type: "css" } statements load CSS modules as constructable stylesheets. Also known as CSS module scripts.'
+description: 'Module `import … with { type: "css" }` statements load CSS modules as constructable stylesheets. Also known as CSS module scripts.'
 spec: https://html.spec.whatwg.org/multipage/webappapis.html#css-module-script
