--- a/features/nth-of-type.yml
+++ b/features/nth-of-type.yml
@@ -1,5 +1,5 @@
 name: ":nth-of-type() pseudo-classes"
-description: "The `:nth-of-type()` and `:nth-last-of-type()` CSS functional pseudo-classes match elements based on their position among siblings of the same type. The `:first-of-type`, `:last-of-type`, and :only-of-type` pseudo-classes match the first, last, and only elements of its type."
+description: "The `:nth-of-type()` and `:nth-last-of-type()` CSS functional pseudo-classes match elements based on their position among siblings of the same type. The `:first-of-type`, `:last-of-type`, and `:only-of-type` pseudo-classes match the first, last, and only elements of its type."
 spec: https://drafts.csswg.org/selectors-4/#typed-child-index
 group: selectors
 compat_features:
