--- a/features/movebefore.yml
+++ b/features/movebefore.yml
@@ -1,5 +1,5 @@
 name: moveBefore()
-description: The `moveBefore()` DOM methods relocate a node while preserving its state. For example, you can move an element without disrupting focus or move an iframe without reloading it.
+description: The `moveBefore()` DOM method relocates a node while preserving its state. For example, you can move the active element without losing focus, move an animated element without reseting the animation, or move an iframe without reloading its content.
 spec: https://github.com/whatwg/dom/issues/1255
 group: dom
 compat_features:
