Add missing draft dates

--- a/features/draft/unspecified-html.yml
+++ b/features/draft/unspecified-html.yml
@@ -1,3 +1,4 @@
+draft_date: 2025-02-20
 name: Unspecified HTML
 description: Some browsers implement unspecified HTML elements and attributes. This is an artificial feature that contains references to browser compatibility data entries for those additions.
 spec: https://web-platform-dx.github.io/unspecified/
