--- a/features/draft/unspecified-apis.yml
+++ b/features/draft/unspecified-apis.yml
@@ -1,3 +1,4 @@
+draft_date: 2025-02-20
 name: Unspecified APIs
 description: Some browsers implement unspecified APIs. This is an artificial feature that contains references to browser compatibility data entries for those additions.
 spec: https://web-platform-dx.github.io/unspecified/
