--- a/features/draft/unspecified-css.yml
+++ b/features/draft/unspecified-css.yml
@@ -1,3 +1,4 @@
+draft_date: 2025-02-20
 name: Unspecified CSS
 description: Some browsers implement unspecified CSS properties or values. This is an artificial feature that contains references to browser compatibility data entries for those additions.
 spec: https://web-platform-dx.github.io/unspecified/
