--- a/features/draft/unspecified-javascript.yml
+++ b/features/draft/unspecified-javascript.yml
@@ -1,3 +1,4 @@
+draft_date: 2025-02-20
 name: Unspecified JavaScript
 description: Some browsers implement unspecified JavaScript properties or methods. This is an artificial feature that contains references to browser compatibility data entries for those additions.
 spec: https://web-platform-dx.github.io/unspecified/
