--- a/features/trusted-types.yml
+++ b/features/trusted-types.yml
@@ -5,3 +5,39 @@ caniuse: trusted-types
 group: security
 status:
   compute_from: api.trustedTypes
+compat_features:
+  - api.Element.innerHTML.accepts_TrustedHTML
+  - api.HTMLElement.innerText.scripts_accept_TrustedScript
+  - api.HTMLScriptElement.src.accepts_TrustedScriptURL
+  - api.HTMLScriptElement.text.accepts_TrustedScript
+  - api.Node.textContent.scripts_accept_TrustedScript
+  - api.ShadowRoot.innerHTML.accepts_TrustedHTML
+  - api.TrustedHTML
+  - api.TrustedHTML.toJSON
+  - api.TrustedHTML.toString
+  - api.TrustedScript
+  - api.TrustedScript.toJSON
+  - api.TrustedScript.toString
+  - api.TrustedScriptURL
+  - api.TrustedScriptURL.toJSON
+  - api.TrustedScriptURL.toString
+  - api.TrustedTypePolicy
+  - api.TrustedTypePolicy.createHTML
+  - api.TrustedTypePolicy.createScript
+  - api.TrustedTypePolicy.createScriptURL
+  - api.TrustedTypePolicy.name
+  - api.TrustedTypePolicyFactory
+  - api.TrustedTypePolicyFactory.createPolicy
+  - api.TrustedTypePolicyFactory.defaultPolicy
+  - api.TrustedTypePolicyFactory.emptyHTML
+  - api.TrustedTypePolicyFactory.emptyScript
+  - api.TrustedTypePolicyFactory.getAttributeType
+  - api.TrustedTypePolicyFactory.getPropertyType
+  - api.TrustedTypePolicyFactory.isHTML
+  - api.TrustedTypePolicyFactory.isScript
+  - api.TrustedTypePolicyFactory.isScriptURL
+  - api.setInterval.code_param_accepts_trustedScript
+  - api.setTimeout.code_param_accepts_trustedScript
+  - api.trustedTypes
+  - http.headers.Content-Security-Policy.require-trusted-types-for
+  - http.headers.Content-Security-Policy.trusted-types
