--- a/features/draft/spec/webauthn-3.yml.dist
+++ b/features/draft/spec/webauthn-3.yml.dist
@@ -5,6 +5,8 @@ status:
   baseline: false
   support:
     chrome: "132"
+    chrome_android: "132"
+    edge: "132"
 compat_features:
   - api.PublicKeyCredential.signalAllAcceptedCredentials_static
   - api.PublicKeyCredential.signalCurrentUserDetails_static
